Implementação de SPI na Normalização de Dados