@@ -1,30 +1,34 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class BovinoNormalization {
-    private BovinoNormalization() {}
-    public static Map<String,String> getMap(){
-        Map<String,String> m = new HashMap<>();
-        m.put("bovino", "Bovino");
-        m.put("bovino femea", "Bovino");
-        m.put("bovino fêmea", "Bovino");
-        m.put("bovino macho", "Bovino");
-        m.put("novilha intermediaria", "Bovino");
-        m.put("novilha intermediária", "Bovino");
-        m.put("novilha precoce", "Bovino");
-        m.put("novilhona", "Bovino");
-        m.put("novilho intermediario", "Bovino");
-        m.put("novilho intermediário", "Bovino");
-        m.put("novilho precoce", "Bovino");
-        m.put("novilhao", "Bovino");
-        m.put("novilhão", "Bovino");
-        m.put("vaca", "Bovino");
-        m.put("vitelo", "Bovino");
-        m.put("touro", "Bovino");
-        m.put("touro/touruno", "Bovino");
-        return Collections.unmodifiableMap(m);
+import static java.util.Map.entry;
+
+public final class BovinoNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("bovino", "Bovino"),
+            entry("bovino femea", "Bovino"),
+            entry("bovino fêmea", "Bovino"),
+            entry("bovino macho", "Bovino"),
+            entry("novilha intermediaria", "Bovino"),
+            entry("novilha intermediária", "Bovino"),
+            entry("novilha precoce", "Bovino"),
+            entry("novilhona", "Bovino"),
+            entry("novilho intermediario", "Bovino"),
+            entry("novilho intermediário", "Bovino"),
+            entry("novilho precoce", "Bovino"),
+            entry("novilhao", "Bovino"),
+            entry("novilhão", "Bovino"),
+            entry("vaca", "Bovino"),
+            entry("vitelo", "Bovino"),
+            entry("touro", "Bovino"),
+            entry("touro/touruno", "Bovino")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
