@@ -1,19 +1,23 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class BubalinoNormalization {
-    private BubalinoNormalization() {}
-    public static Map<String,String> getMap(){
-        Map<String,String> m = new HashMap<>();
-        m.put("bubalino", "Bubalino");
-        m.put("bubalino jovem", "Bubalino");
-        m.put("búfala", "Bubalino");
-        m.put("bufala", "Bubalino");
-        m.put("búfalo", "Bubalino");
-        m.put("bufalo", "Bubalino");
-        return Collections.unmodifiableMap(m);
+import static java.util.Map.entry;
+
+public final class BubalinoNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("bubalino", "Bubalino"),
+            entry("bubalino jovem", "Bubalino"),
+            entry("búfala", "Bubalino"),
+            entry("bufala", "Bubalino"),
+            entry("búfalo", "Bubalino"),
+            entry("bufalo", "Bubalino")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
