@@ -1,15 +1,19 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class CoelhoNormalization {
-    private CoelhoNormalization() {}
-    public static Map<String,String> getMap(){
-        Map<String,String> m = new HashMap<>();
-        m.put("coelho", "Coelho");
-        m.put("coelha", "Coelho");
-        return Collections.unmodifiableMap(m);
+import static java.util.Map.entry;
+
+public final class CoelhoNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("coelho", "Coelho"),
+            entry("coelha", "Coelho")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
