@@ -1,15 +1,19 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class CordeiroNormalization {
-    private CordeiroNormalization() {}
-    public static Map<String,String> getMap(){
-        return Collections.unmodifiableMap(new HashMap<>(){{
-            put("cordeiro","Cordeiro");
-            put("cordeira","Cordeiro");
-        }});
+import static java.util.Map.entry;
+
+public final class CordeiroNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("cordeiro", "Cordeiro"),
+            entry("cordeira", "Cordeiro")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
