@@ -1,24 +1,28 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class EquinoNormalization {
-    private EquinoNormalization() {}
-    public static Map<String,String> getMap(){
-        Map<String,String> m = new HashMap<>();
-        m.put("equino", "Equino");
-        m.put("equino femea", "Equino");
-        m.put("equino fêmea", "Equino");
-        m.put("equino macho", "Equino");
-        m.put("cavalo", "Equino");
-        m.put("égua", "Equino");
-        m.put("egua", "Equino");
-        m.put("potro", "Equino");
-        m.put("pônei", "Equino");
-        m.put("ponei", "Equino");
-        m.put("horse", "Equino");
-        return Collections.unmodifiableMap(m);
+import static java.util.Map.entry;
+
+public final class EquinoNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("equino", "Equino"),
+            entry("equino femea", "Equino"),
+            entry("equino fêmea", "Equino"),
+            entry("equino macho", "Equino"),
+            entry("cavalo", "Equino"),
+            entry("égua", "Equino"),
+            entry("egua", "Equino"),
+            entry("potro", "Equino"),
+            entry("pônei", "Equino"),
+            entry("ponei", "Equino"),
+            entry("horse", "Equino")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
