@@ -1,15 +1,19 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class FaizaoNormalization {
-    private FaizaoNormalization() {}
-    public static Map<String,String> getMap(){
-        return Collections.unmodifiableMap(new HashMap<>(){{
-            put("faizao","Faizão");
-            put("faisao","Faizão");
-        }});
+import static java.util.Map.entry;
+
+public final class FaizaoNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("faizao", "Faizão"),
+            entry("faisao", "Faizão")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
