@@ -1,18 +1,22 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class GalinhaDomesticaNormalization {
-    private GalinhaDomesticaNormalization() {}
-    public static Map<String,String> getMap(){
-        Map<String,String> m = new HashMap<>();
-        m.put("frango","Galinha Doméstica");
-        m.put("frango especial","Galinha Doméstica");
-        m.put("galeto","Galinha Doméstica");
-        m.put("galinha","Galinha Doméstica");
-        m.put("galo","Galinha Doméstica");
-        return Collections.unmodifiableMap(m);
+import static java.util.Map.entry;
+
+public final class GalinhaDomesticaNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("frango", "Galinha Doméstica"),
+            entry("frango especial", "Galinha Doméstica"),
+            entry("galeto", "Galinha Doméstica"),
+            entry("galinha", "Galinha Doméstica"),
+            entry("galo", "Galinha Doméstica")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
