@@ -1,15 +1,19 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class LeitaoNormalization {
-    private LeitaoNormalization() {}
-    public static Map<String,String> getMap(){
-        return Collections.unmodifiableMap(new HashMap<>(){{
-            put("leitao","Leitão");
-            put("leitoa","Leitão");
-        }});
+import static java.util.Map.entry;
+
+public final class LeitaoNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("leitao", "Leitão"),
+            entry("leitoa", "Leitão")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
