@@ -1,20 +1,24 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class OutrosNormalization {
-    private OutrosNormalization() {}
-    public static Map<String,String> getMap(){
-        Map<String,String> m = new HashMap<>();
-        m.put("nonato","Nonato");
-        m.put("outros anfíbios","Outros anfíbios");
-        m.put("queixada","Queixada");
-        m.put("ratitas","Ratitas");
-        m.put("paca femea","Paca");
-        m.put("paca fêmea","Paca");
-        m.put("paca macho","Paca");
-        return Collections.unmodifiableMap(m);
+import static java.util.Map.entry;
+
+public final class OutrosNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("nonato", "Nonato"),
+            entry("outros anfíbios", "Outros anfíbios"),
+            entry("queixada", "Queixada"),
+            entry("ratitas", "Ratitas"),
+            entry("paca femea", "Paca"),
+            entry("paca fêmea", "Paca"),
+            entry("paca macho", "Paca")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
