@@ -1,20 +1,24 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class OvinoNormalization {
-    private OvinoNormalization() {}
-    public static Map<String,String> getMap(){
-        Map<String,String> m = new HashMap<>();
-        m.put("ovino","Ovino");
-        m.put("ovino femea","Ovino");
-        m.put("ovino fêmea","Ovino");
-        m.put("ovino macho","Ovino");
-        m.put("ovelha","Ovino");
-        m.put("cordeiro","Ovino");
-        m.put("cordeira","Ovino");
-        return Collections.unmodifiableMap(m);
+import static java.util.Map.entry;
+
+public final class OvinoNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("ovino", "Ovino"),
+            entry("ovino femea", "Ovino"),
+            entry("ovino fêmea", "Ovino"),
+            entry("ovino macho", "Ovino"),
+            entry("ovelha", "Ovino"),
+            entry("cordeiro", "Ovino"),
+            entry("cordeira", "Ovino")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
