@@ -1,29 +1,33 @@
 package ifpb.bancoDeDados.BancodeDados.service.normalization.classNormalization;
 
-import java.util.Collections;
-import java.util.HashMap;
+import ifpb.bancoDeDados.BancodeDados.service.normalization.CategoriaNormalizerProvider;
 import java.util.Map;
 
-public final class SuinoNormalization {
-    private SuinoNormalization() {}
-    public static Map<String,String> getMap(){
-        Map<String,String> m = new HashMap<>();
-        m.put("porco matrizeiro","Suíno");
-        m.put("porca matrizeira","Suíno");
-        m.put("porco nao classificado","Suíno");
-        m.put("porco não classificado","Suíno");
-        m.put("suino femea","Suíno");
-        m.put("suíno femea","Suíno");
-        m.put("suino fêmea","Suíno");
-        m.put("suino macho","Suíno");
-        m.put("suíno macho","Suíno");
-        m.put("suino tipo banha, femea","Suíno");
-        m.put("suino tipo banha, macho","Suíno");
-        m.put("suino tipo carne, femea","Suíno");
-        m.put("suino tipo carne, macho","Suíno");
-        m.put("suíno","Suíno");
-        m.put("leitao","Suíno");
-        m.put("leitoa","Suíno");
-        return Collections.unmodifiableMap(m);
+import static java.util.Map.entry;
+
+public final class SuinoNormalization implements CategoriaNormalizerProvider {
+
+    private static final Map<String,String> MAP = Map.ofEntries(
+            entry("porco matrizeiro", "Suíno"),
+            entry("porca matrizeira", "Suíno"),
+            entry("porco nao classificado", "Suíno"),
+            entry("porco não classificado", "Suíno"),
+            entry("suino femea", "Suíno"),
+            entry("suíno femea", "Suíno"),
+            entry("suino fêmea", "Suíno"),
+            entry("suino macho", "Suíno"),
+            entry("suíno macho", "Suíno"),
+            entry("suino tipo banha, femea", "Suíno"),
+            entry("suino tipo banha, macho", "Suíno"),
+            entry("suino tipo carne, femea", "Suíno"),
+            entry("suino tipo carne, macho", "Suíno"),
+            entry("suíno", "Suíno"),
+            entry("leitao", "Suíno"),
+            entry("leitoa", "Suíno")
+    );
+
+    @Override
+    public Map<String, String> getMap() {
+        return MAP;
     }
 }
